--- a/ReconocimientoDeVoz/.classpath
+++ b/ReconocimientoDeVoz/.classpath
@@ -7,15 +7,22 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="Lib/cgjsapi.jar"/>
-	<classpathentry kind="lib" path="Lib/EdisoncorSX/edisoncorSX.jar"/>
-	<classpathentry kind="lib" path="Lib/stanford-spanish-corenlp-2018-10-05-models.jar"/>
-	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/slf4j-api.jar"/>
-	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/slf4j-simple.jar"/>
-	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/stanford-corenlp-3.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/stanford-corenlp-3.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/stanford-corenlp-3.9.2-models.jar"/>
-	<classpathentry kind="lib" path="Lib/protobuf-java-3.8.0.jar"/>
 	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/ejml-0.23.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/stanford-corenlp-3.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/stanford-corenlp-3.9.2-models.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/stanford-corenlp-3.9.2-sources.jar"/>
 	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/stanford-corenlp-3.9.2.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/protobuf.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/joda-time-2.9-sources.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/joda-time.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/jollyday-0.4.9-sources.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/jollyday.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/jaxb-api-2.4.0-b180830.0359-sources.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/jaxb-api-2.4.0-b180830.0359.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/jaxb-core-2.3.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/jaxb-core-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/jaxb-impl-2.4.0-b180830.0438-sources.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-corenlp-full-2018-10-05/jaxb-impl-2.4.0-b180830.0438.jar"/>
+	<classpathentry kind="lib" path="Lib/stanford-spanish-corenlp-2018-10-05-models.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
